--- a/TextUtils/public/index.html
+++ b/TextUtils/public/index.html
@@ -7,9 +7,36 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A comprehensive suite of text utilities, including word count, text transformation, and more."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="text utilities, word count, text transformation, text analysis, character count, text tools, online text tools"
+    />
+    <meta name="author" content="Your Name or Company" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Text Utilities - The Ultimate Online Text Tools"
+    />
+    <meta
+      property="og:description"
+      content="Explore a wide range of text utilities including word count, text transformation, and more. Perfect for writers, editors, and content creators."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/social-image.jpg" />
+    <meta property="og:url" content="https://yourwebsiteurl.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Text Utilities - The Ultimate Online Text Tools"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore a wide range of text utilities including word count, text transformation, and more. Perfect for writers, editors, and content creators."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/social-image.jpg" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -17,7 +44,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Text Utilities</title>
   </head>
   <body>
     <div id="root"></div>
