--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Text.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -23,7 +23,7 @@
       property="og:description"
       content="Explore a wide range of text utilities including word count, text transformation, and more. Perfect for writers, editors, and content creators."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/social-image.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/Text.ico" />
     <meta property="og:url" content="https://yourwebsiteurl.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -35,7 +35,7 @@
       name="twitter:description"
       content="Explore a wide range of text utilities including word count, text transformation, and more. Perfect for writers, editors, and content creators."
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/social-image.jpg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/Text.ico" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
